--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -8,7 +8,23 @@ body {
   padding: 0;
 }
 
+$lightGreen: #b9e7e7;
+
 .app {
   .container {
+    .auth {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background-color: $lightGreen;
+
+      h1 {
+        color: teal;
+        font-size: 3rem;
+        margin-bottom: 1.5rem;
+      }
+    }
   }
 }
