--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -11,58 +11,80 @@ body {
 $lightGreen: #b9e7e7;
 
 .app {
-  .container {
-    nav {
-      padding-block: 1rem;
-      ul {
-        list-style: none;
+  .navbar {
+    .container {
+      max-width: 1440px;
+      padding-inline: 20px;
+      margin-inline: auto;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      nav {
+        padding-block: 1rem;
         display: flex;
         align-items: center;
         justify-content: center;
         gap: 0.5rem;
-        li {
-          a {
-            text-decoration: none;
+        ul {
+          list-style: none;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          gap: 0.5rem;
+          li {
+            a {
+              text-decoration: none;
+            }
           }
         }
       }
     }
-    .auth {
+  }
+  // Register and Login Page
+  .auth {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: $lightGreen;
+
+    h1 {
+      color: teal;
+      font-size: 3rem;
+      margin-bottom: 1.5rem;
+    }
+
+    form {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background-color: $lightGreen;
+      gap: 1rem;
+      background-color: #fff;
+      padding: 1rem;
+      width: 300px;
 
-      h1 {
-        color: teal;
-        font-size: 3rem;
-        margin-bottom: 1.5rem;
+      input {
+        border: none;
+        border-bottom: 1px solid lightgray;
+        padding: 0.5rem;
       }
 
-      form {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        background-color: #fff;
-        padding: 1rem;
-        width: 300px;
+      button {
+        padding: 0.5rem 1rem;
+        background-color: teal;
+        outline: none;
+        border: none;
+        font-size: 1rem;
+        cursor: pointer;
+        color: #fff;
+      }
+      p {
+        text-align: center;
+        font-size: 12px;
 
-        input {
-          border: none;
-          border-bottom: 1px solid lightgray;
-          padding: 0.5rem;
-        }
-
-        button {
-          padding: 0.5rem 1rem;
-          background-color: teal;
-          outline: none;
-          border: none;
-          font-size: 1rem;
-          cursor: pointer;
-          color: #fff;
+        &.error {
+          color: red;
         }
       }
     }
